name:                pure-space-time
version:             0.7.0.0
synopsis:            Styled views
homepage:            github.com/grumply/pure-space-time
license:             BSD3
license-file:        LICENSE
author:              Sean Mackenzie
maintainer:          sean@grump.ly
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
      Pure.Spacetime
      Pure.Spacetime.Base
      Pure.Spacetime.Count
      Pure.Spacetime.Factor
      Pure.Spacetime.Improving
      Pure.Spacetime.Magnitude
      Pure.Spacetime.Percent
      Pure.Spacetime.Pretty
      Pure.Spacetime.Rate
      Pure.Spacetime.Similar
      Pure.Spacetime.Space
      Pure.Spacetime.Time

  build-depends:
      base >=4.8
    , pure >= 0.7 && < 1
    , pure-json >= 0.7 && < 1
    , pure-variance >= 0.7 && < 1

  hs-source-dirs:      src
  default-language:    Haskell2010