name:                pure-spacetime
version:             0.8.0.0
synopsis:            Patterns for manipulating relationships between space  time
homepage:            purehs.org/doc/pure-spacetime
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/grumply/pure-spacetime.git

library
  exposed-modules:
      Pure.Spacetime
      Pure.Spacetime.Base
      Pure.Spacetime.Count
      Pure.Spacetime.Frequency
      Pure.Spacetime.Improving
      Pure.Spacetime.Magnitude
      Pure.Spacetime.Multiplier
      Pure.Spacetime.Percent
      Pure.Spacetime.Similar
      Pure.Spacetime.Space
      Pure.Spacetime.Time

  build-depends:
      base
    , pure
    , pure-json
    , pure-time
    , pure-variance

  hs-source-dirs:      src
  default-language:    Haskell2010
